<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartTouch</string>
    <string name="STR_EMPTY"></string>
    <string name="STR_POPU_TITLE">Please select device</string>
    <string name="STR_POPU_LEFT_BTN">Headset</string>
    <string name="STR_POPU_RIGHT_BTN">SmartTouch</string>
    <string name="STR_ADD_APP">Add Function</string>
    <string name="STR_CLICK_ONE">Function(First Key)</string>
    <string name="STR_CLICK_TWO">Function(Second Key)</string>
    <string name="STR_CLICK_THRID">Function(Three Key)</string>
    <string name="STR_CLICK_FOUR">Function(Four Key)</string>
    <string name="STR_CLICK_FIVE">Function(Five Key)</string>
    <string name="STR_CLICK_SIX">Function(Six Key)</string>
    <string name="STR_APP_CASE">Record</string>
    <string name="STR_APP_CAMERA_QUICK">Capture</string>
    <string name="STR_APP_FLASHLIGHT">FlashLight</string>
    <string name="STR_APP_PHONE">Phone</string>
    <string name="STR_APP_CAMERA">Camera</string>
    <string name="STR_APP_UNLOCK">Home Key</string>
    <string name="STR_APP_LOCK">Screen Lock</string>
    <string name="STR_APP_SWITCH">APP Bag</string>
    <string name="STR_APP_MORE">More</string>
    <string name="STR_APP_LOCK_TIP">Please allow smart touch to use the service</string>
    <string name="STR_CHECK_SDCARD">SD crad is not available, please check SD card</string>
    <string name="STR_UNKNOWN">unknown</string>
    <string name="STR_OK">OK</string>
    <string name="STR_CANCEL">Cancel</string>
    <string name="STR_SHARE">Share</string>
    <string name="STR_ABOUT">About</string>
    <string name="STR_STOP">Stop</string>
    <string name="STR_VIEW">View</string>
    <string name="STR_RECORD">Record</string>
    <string name="STR_RECORD_LIST_TIPS">Click on the top-right corner to the record page</string>
    <string name="STR_SERIAL_NUMBER">please input the serial number</string>
    <string name="STR_REG_NO_NETWORK">Register failed, please check network!</string>
    <string name="STR_REG_NETWORK_ERROR">Register failed,network fault,please try again later!</string>
    <string name="STR_REG_DATA_ERROR">Register failed, please check serial number!</string>
    <string name="STR_REG_SUCC">Register successful!</string>
    <string name="STR_INVAILD_SERIAL_NUMBER">Invalid serial number</string>
    <string name="STR_WAIT">Registering, please wait&#8230;</string>
    <string name="STR_BTN_REGEDIT">Register</string>
    <string name="STR_BTN_SCAN">SCAN</string>
    <string name="STR_CHECK_UPDATE">check update</string>
    <string name="STR_UNINSTALL">Uninstall</string>
    <string name="STR_CHECK_UPDATE_TIPS">checking,please waiting&#8230;</string>
    <string name="STR_ABOUT_TEXT"><b>Smart touch, shock hits! Add four touch key to you phone, touch to capture, touch to lock screen, touch to record, touch to start the application etc.</b>\n\n<b>Feedback</b>\n<b>zhaozhiyongmymail@163.com</b></string>
    <string name="STR_SHARE_TEXT">Smart touch, shock hits! Add four touch key to you phone, touch to capture, touch to lock screen, touch to record, touch to start the application etc.</string>
	<string name="STR_EXPLAIN">In any page,Double-Click the specified location by circle,will go to desired application</string>
	<string name="STR_SETTING">Click to enter the function settings page,Long press to remove</string>
	<string name="STR_CREATE_GESTURE_PASSWORD">Create an gesture password</string>
	<string name="STR_DRAW_GESTURE_PASSWORD">Draw an gesture password</string>
    <string name="STR_DRAW_UNLOCK_PATTERN">Draw an unlock pattern</string>
    <string name="STR_PATTERN_HOW_TO_DRAW">How to draw an unlock pattern</string>
    <string name="STR_PATTERN_TOO_SHORT">Too short,please try again</string>
    <string name="STR_PATTERN_SAVE">Your new unlcok pattern</string>
    <string name="STR_PATTERN_RECORED">Pattern recorded!</string>
	<string name="STR_PATTERN_DRAW_AGAIN">Draw pattern again to confirm</string>
	<string name="STR_PATTERN_MISMATCH">"Mismatch,please try again"</string>
	<string name="STR_PATTERN_RELEASE_FINGER">Release finger when finished</string>
	<string name="STR_PATTERN_BEYOND_TIMES">You have incorrectly drawn you unlock pattern 5 times.Try again in 30 seconds></string>
    <string name="STR_REMAIN_TIMES">Pattern wrong,there are %s times to try</string>
    <string name="STR_PATTERN_TRY_TIME">Try again in %s seconds</string>
	<string name="STR_PATTERN_CELL_ADDED">Cell ADDED!</string>
	<string name="STR_PATTERN_START">"Drawing pattern"</string>
	<string name="STR_PATTERN_DRAW_FINISH">Finish pattern </string>
	<string name="STR_PATTERN_CLEAR">Clear Pattern</string>
	<string name="STR_CREATE_GSTURE_TIPS">You can create a pattern, so that others will not be able to open the application that has been locked</string>
    <string name="STR_RETRY">Retry</string>
    <string name="STR_CLOSE">Close</string>
    <string name="STR_FAILED">Failed</string>
    <string name="STR_CONTINUE">Continue</string>
    <string name="STR_CONFIRM">Confirm</string>
    <string name="STR_SAVE">Save</string>
    <string name="STR_PRIVACTY_SETTING">App list</string>
    <string name="STR_PRIVACTY_TAB1">Shortcut keys</string>
    <string name="STR_PRIVACTY_TAB2">Game box</string>
    <string name="STR_MAIN_PRIVACTY">Private hiding</string>
    <string name="STR_MAIN_ACTION">Action</string>
    <string name="STR_GAME_BOX_BG_TIP">一个令人惊叹的世界正在建设中\n敬请期待中&#8230;</string>
    <string name="STR_DOWNLOAD">Download</string>
    <string name="STR_TAP_SCREEN_TO_RETRY">Error,network abnormal\nTap the screen to retry</string>
    <string name="STR_ALL">All Loaded</string>
    <string name="STR_MORE">More</string>
    <string name="STR_LOADING">Loading&#8230;</string>            
    <string name="STR_MODIFY_PASSWORD">Modify password</string>    
    <string name="STR_RING">Click sounds</string>
    <string name="STR_VIBRATE">Vibrate on click</string>
 	<string name="STR_MODIFY">Modify Pattern Password</string>
 	<string name="STR_SETTING_TITLE">Setting</string>
	<string name="STR_MODIFY_SUCCESS">Modify Pattern Password successfull!</string>
	<string name="STR_ONE_KEY">First Key</string>
	<string name="STR_TWO_KEY">Second Key</string>
	<string name="STR_THREE_KEY">Three Key</string>
	<string name="STR_FOUR_KEY">Four Key</string>
	<string name="STR_FIVE_KEY">Five Key</string>
	<string name="STR_SIX_KEY">Six Key</string>
	<string name="STR_KEY_POSTION">It is button key position above the arrows\n click to test</string>
	<string name="STR_FIND_KEY">Find the key</string>
	<string name="STR_NOT_FIND_KEY">Not find postion</string>
	<string name="STR_ENABLE">Enable SmartTouch</string>
	<string name="STR_SERVICE_TEXT">touch to capture,touch to open app,personal locker etc！</string>
	<string name="STR_REGISTER">Register</string>
    <string name="STR_CAMEAR_NOT_PERMISSION">Can\'t access to camera, please permission</string>
    <string name="STR_CAMEAR_DENIED">permission failed,you can\'t access related features of camera</string>
    <string name="STR_RECORD_DENIED">permission failed,you can\'t access related features of record</string>
    <string name="STR_WINDOWS_ALTER_PERMISSION">SmartTouch need to be used for windows alter permission, please permission.</string>
    <string name="STR_ALLOW">Allow</string>
    <string name="STR_DENIED">Denied</string>
    <string name="STR_PERMISSION_FAILED">Permission failed,quit!</string>
    <string name="STR_ACCESSBILITY">please open accessbility function!</string>
</resources>