<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <LinearLayout
        android:id="@+id/lyTapPos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgvOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smartkey_arrows_vertical" />

            <TextView
                android:id="@+id/tvFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_ONE_KEY"
                android:textColor="@color/COLOR_WHITE"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgvTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smartkey_arrows_vertical" />

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_TWO_KEY"
                android:textColor="@color/COLOR_WHITE"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgvThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smartkey_arrows_vertical" />

            <TextView
                android:id="@+id/tvThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_THREE_KEY"
                android:textColor="@color/COLOR_WHITE"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgvFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smartkey_arrows_vertical" />

            <TextView
                android:id="@+id/tvFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_FOUR_KEY"
                android:textColor="@color/COLOR_WHITE"
                android:textSize="16dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/STR_KEY_POSTION"
        android:textColor="@color/COLOR_WHITE"
        android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/BtnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/STR_FIND_KEY"
        android:textColor="@color/COLOR_BLACK"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </LinearLayout>

</LinearLayout>