<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/lyRegedit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/COLOR_WHITE"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/etSerial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/STR_SERIAL_NUMBER"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="40dp"
            android:text="@string/STR_BTN_SCAN"
            android:textColor="@color/MAIN_BG_COLOR"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="40dp"
            android:text="@string/STR_BTN_REGEDIT"
            android:textColor="@color/MAIN_BG_COLOR"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/smartkey_logo_text" />

</LinearLayout>
