<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/COLOR_BLACK"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imgvSettingBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smartkey_back" />

        <TextView
            android:id="@+id/lbSettingTitle"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/STR_SETTING_TITLE" />
    </LinearLayout>
   

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <LinearLayout
                android:id="@+id/lyClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/smartkey_text_frame_bg"
                android:gravity="center"
                android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_ENABLE"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imgvEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/smartkey_btn_off" />

    </LinearLayout>
            
             <LinearLayout
                 android:id="@+id/lySound"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-2dp"
                 android:background="@drawable/smartkey_text_frame_bg"
                 android:gravity="center"
                 android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_RING"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imgvSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/smartkey_btn_off" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyVibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_VIBRATE"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imgvVibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/smartkey_btn_off" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyModifyPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_MODIFY"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/smartkey_event_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyCheckUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_CHECK_UPDATE"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/smartkey_event_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_SHARE"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/smartkey_event_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_ABOUT"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/smartkey_event_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyUninstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/smartkey_text_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/STR_UNINSTALL"
            android:textColor="@color/COLOR_BLACK"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/smartkey_event_next" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
