<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/COLOR_BLACK"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imgvAppBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smartkey_back" />

        <TextView
            android:id="@+id/tvAppTitle"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTab1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/STR_PRIVACTY_TAB1"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvTab2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/STR_PRIVACTY_TAB2"
                android:textSize="16dp" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:id="@+id/vTab1"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@drawable/smatkey_record_ok" />

            <View
                android:id="@+id/vTab2"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@drawable/smatkey_record_ok" />

        </LinearLayout>
        
        <android.support.v4.view.ViewPager
            android:id="@+id/vpSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" >
        </android.support.v4.view.ViewPager>

    </LinearLayout>
</LinearLayout>
