<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lyRegedit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/COLOR_WHITE"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/COLOR_BLACK"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:text="@string/STR_REGISTER" />
        </LinearLayout>

        <EditText
            android:id="@+id/etSerial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/STR_SERIAL_NUMBER"
            android:padding="8dp" />

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="40dp"
            android:text="@string/STR_BTN_SCAN"
            android:textColor="@color/MAIN_BG_COLOR"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="40dp"
            android:text="@string/STR_BTN_REGEDIT"
            android:textColor="@color/MAIN_BG_COLOR"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vpNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:id="@+id/lyIndi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/COLOR_WHITE"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/imgvIndi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:src="@drawable/smartkey_page_indicator_1" />

            <ImageView
                android:id="@+id/imgvIndi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:src="@drawable/smartkey_page_indicator_2" />

            <ImageView
                android:id="@+id/imgvIndi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:src="@drawable/smartkey_page_indicator_3" />

            <ImageView
                android:id="@+id/imgvIndi4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:src="@drawable/smartkey_page_indicator_4" />

            <ImageView
                android:id="@+id/imgvIndi5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smartkey_page_indicator_5" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>